deploy/overlays/prod/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packmate-frontend
spec:
  replicas: 2
