deploy/overlays/prod/route-timeout-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: packmate-frontend
  annotations:
    haproxy.router.openshift.io/timeout: 180s
